# telco_slm_agent_demo

./: .gitignore  README.md  app.yaml  databricks.yml  design_doc.md  design_doc_v2_smart_model_upgrades.md  instructions.md  otel_hf_training_data_report.md  project-brief.md  to-do.md  v2_to_v1_migration_plan.md
app_v2/: app.yaml  pyproject.toml  requirements.txt
app_v2/agent_app/: agent.py  prompts.py  server.py  tools.py
app_v2/scripts/: deploy_app.py  pull_docs_from_volume.sh  start_app.py
v2/_vendor/smart-model-upgrades/: .gitignore  README.md  pyproject.toml
v2/_vendor/smart-model-upgrades/examples/: minimal_agent.py
v2/_vendor/smart-model-upgrades/examples/hotpotqa/: agent.py  agent_config.yaml  prepare_data.py  seed_prompts.yaml
v2/_vendor/smart-model-upgrades/examples/support_agent/: agent.py  agent_config.yaml  eval_set.yaml  seed_prompts.yaml
v2/_vendor/smart-model-upgrades/examples/toy_3step_research/: agent.py  agent_config.yaml  eval_set.yaml  seed_prompts.yaml
v2/_vendor/smart-model-upgrades/examples/toy_email_writer/: agent.py  agent_config.yaml  eval_set.yaml  seed_prompts.yaml
v2/_vendor/smart-model-upgrades/examples/toy_qa_critic/: agent.py  agent_config.yaml  eval_set.yaml  seed_prompts.yaml
v2/_vendor/smart-model-upgrades/examples/toy_translator/: agent.py  agent_config.yaml  eval_set.yaml  seed_prompts.yaml
v2/_vendor/smart-model-upgrades/examples/wanderbricks/: agent.py  agent_config.yaml  seed_prompts.yaml  tools.py
v2/_vendor/smart-model-upgrades/examples/wanderbricks_up_to_date/: agent.py  agent_config.yaml  eval_set.yaml  seed_prompts.yaml
v2/_vendor/smart-model-upgrades/notebooks/: ai_gateway_demo.py  optimize.py  setup.py
v2/_vendor/smart-model-upgrades/notebooks/archive/: eval.py  (+10 more)
v2/_vendor/smart-model-upgrades/smart_model_upgrades/: __init__.py  ai_gateway.py  genie.py  optimization.py  prompt_registry.py
v2/_vendor/smart-model-upgrades/tests/: test_adapter.py  test_parsing.py  test_promote_to_prod.py  test_public_api.py  test_score_and_optimize_prompts_and_models.py  test_setup_endpoints.py
(+59 files in other folders)
