[project]
name = "otel-slm-agent-demo"
version = "0.1.0"
description = "Telco Network Analytics Agent powered by OTel SLMs + LangGraph"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "databricks-langchain[memory]>=0.19.0",
    "databricks-ai-bridge[agent-server]>=0.19.0",
    "databricks-sdk>=0.79.0",
    "databricks-vectorsearch>=0.40",
    "databricks-agents>=1.9.3",
    "mlflow>=3.10.1",
    "langgraph>=1.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_app"]
